syntax = "proto3";

option csharp_namespace = "AspCertsDemo";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// 
service AspCertsAuth {
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc SetAuth (HelloRequest) returns (HelloReply);
}


service AspCertsMake {
	rpc MakeCert (MakeCertRequest) returns (MakeCertReply);
}

message MakeCertRequest {
	string account = 1;
}

message MakeCertReply {
	int32 code = 1;
	optional bytes cert = 2;
	optional string tip = 3;
	optional string pem = 4;
	optional string ca = 5;
	optional bytes cap = 6;
}